# CM2036-gesture-recognition-lab

./: .gitignore  README.md  answers.py  capture_serial_data.py  gesture_recognition_lab.ipynb  pyproject.toml
data/: TDATA.csv  sample_data_format.md
